--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,88 @@
-@import-normalize;
+@import-normalize; /* bring in normalize.css styles */
+
 body {
-  padding-top: 50px;
-  background-color: #e7ecf2;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 * {
   box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #c0c0c0;
+  color: #212121;
+  line-height: 1.5;
+
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  height: auto;
+}
+
+#search-box {
+  font: inherit;
+  padding: 8px;
+  max-width: 320px;
+  margin-bottom: 16px;
+}
+h1 {
+  text-transform: uppercase;
+}
+/* label {
+  display: flex;
+  flex-direction: column;
+} */
+.country-list {
   margin: 0;
   padding: 0;
-}
-li {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.country-list__element p {
+  margin-block: 10px 0;
+}
+.country-list__element img {
+  width: 90px;
+  height: auto;
+}
+.country-info {
+  display: flex;
+  flex-direction: column;
+  align-items: Left;
+  width: 40ch;
+  text-align: center;
+}
+.country-info img {
+  width: 200px;
+  height: auto;
+}
+.bold {
+  font-weight: 700;
+}
+
+li{
+
+  list-style: none;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
 }
